    of a package

  [ Joey Hess ]
  * debcheckout: when checking out svn repos, check them out into a directory
    named for the package, to avoid checking out into ie, a trunk directory.

  [ Adam D. Barratt ]
  * licensecheck
    + tidy up the pre-check regexes
    + unescape "\@"s in copyright statements
    + decruft © as well as (C)
  * debdiff: allow whitespace to be ignored in diffs (Closes: #439163)
  * debcommit
    + Allow changes to only debian/changelog to be committed.
      Thanks to martin f krafft for the patch. (Closes: #439992)
    + Allow the leading "* " to be stripped from commit messages
      (Closes: #440013)
  * bts: Change working directory back to its original location before
    running the browser (Closes: #436095)
  * checkbashisms: Catch the use of test/[ with a unary -a operator. Thanks to
    Matthew Wilcox for the suggestion.

  [ Julian Gilbey ]
  * The package should suggest git-core, not git (Closes: #440018)
  * debchange: update for new BTS layout (pkgreport.cgi syntax changed)

  [ Joey Hess ]
  * Add list-unreleased, by Frans Pop.

 -- Joey Hess <joeyh@debian.org>  Mon, 10 Sep 2007 14:35:18 -0400

devscripts (2.10.7) unstable; urgency=low

  [ Adam D. Barratt ]
  * debian/control: Add libsoap-lite-perl to the Suggests and
    description for bts
  * README
    + Add libcrypt-ssleay-perl to the description for uscan
    + Add libsoap-lite-perl to the description for bts
    + Mention the SOAP interface in the description for bts
  * debchange: Fix NMU versioning for Debian native packages
  * dd-list: Sort developer names case-insensitively. Thanks to Steinar H.
    Gunderson for the suggestion
  * bts
    + Fix test for libwww-perl not being installed
    + Only pass -c to mail(1) if there are Cc: addresses
      (Closes: #433385)
    + Add support for selecting bug lists via the SOAP interface. This
      requires libsoap-lite-perl. Thanks to Don Armstrong for the patch
      (Closes: #433169)